--- a/roles/puppet-to-ansible-americano/defaults/main.yml
+++ b/roles/puppet-to-ansible-americano/defaults/main.yml
@@ -1,3 +1,22 @@
 ---
-# defaults file for apache
-base_httpd_listen_port: 80
+# defaults file for web.yml
+
+  tasks:
+    - name: Name of the game
+      command: echo americano
+
+    - name: Wait for 70 seconds prior to deployment to prod
+      wait_for:
+        timeout: 70
+    
+    - name: deploy to the prod environment
+      environment:
+        prod    #spool out information for this. It should look like http_proxy: http://proxy.example.com:8080
+    
+    - name: Include versions of  
+
+
+    - name: Use systemd as a service provider
+      ansible.builtin.systemd:
+        state: started
+        name: httpd
