--- a/roles/apache/meta/main.yml
+++ b/roles/apache/meta/main.yml
@@ -58,3 +58,13 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
+
+  - role: php-versions
+    become: true
+    php-versions: 7.2
+    tags: php
+    
+  - role: php
+    become: true
+    php-versions: 7.2
+    tags: php
