--- a/roles/tomcat/handlers/main.yml
+++ b/roles/tomcat/handlers/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: restart tomcat
-  service: name=tomcat state=restarted
+  service: 
+    name: tomcat
+    state: restarted
 
 - name: restart iptables
-  service: name=iptables state=restarted
+  service: 
+    name: iptables
+    state: restarted
